--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 
         <footer>
             <p>Built with Bot Sportello • Discord Bot Project Manager</p>
-            <p style="margin-top: 10px; font-size: 0.9em;">Use <code>/create-game</code> in Discord to add new projects</p>
+            <p style="margin-top: 10px; font-size: 0.9em;">Use <code>/add-page</code> in Discord to add new projects</p>
         </footer>
     </div>
 
@@ -213,8 +213,8 @@
             addCard.className = 'project-card add-project';
             addCard.innerHTML = `
                 <div class="project-icon">➕</div>
-                <div class="project-title">Create New Project</div>
-                <div class="project-description">Use /create-game in Discord to add a new project</div>
+                <div class="project-title">Add New Page</div>
+                <div class="project-description">Use /add-page in Discord to add a new page</div>
             `;
             grid.appendChild(addCard);
         }
