--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bot Sportello's Projects</title>
+    <title>Bot Sportello's Arcade</title>
     <style>
+        @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
+
         * {
             margin: 0;
             padding: 0;
@@ -12,33 +14,66 @@
         }
 
         body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            font-family: 'Press Start 2P', cursive;
+            background: #0a0e0f;
             min-height: 100vh;
             padding: 40px 20px;
+            position: relative;
+            overflow-x: hidden;
+        }
+
+        /* Animated grid background */
+        body::before {
+            content: '';
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-image:
+                linear-gradient(0deg, transparent 24%, rgba(0, 255, 100, 0.15) 25%, rgba(0, 255, 100, 0.15) 26%, transparent 27%, transparent 74%, rgba(0, 255, 100, 0.15) 75%, rgba(0, 255, 100, 0.15) 76%, transparent 77%, transparent),
+                linear-gradient(90deg, transparent 24%, rgba(0, 255, 100, 0.15) 25%, rgba(0, 255, 100, 0.15) 26%, transparent 27%, transparent 74%, rgba(0, 255, 100, 0.15) 75%, rgba(0, 255, 100, 0.15) 76%, transparent 77%, transparent);
+            background-size: 50px 50px;
+            animation: gridScroll 20s linear infinite;
+            pointer-events: none;
+            z-index: 0;
+        }
+
+        @keyframes gridScroll {
+            0% { transform: perspective(500px) rotateX(60deg) translateY(0); }
+            100% { transform: perspective(500px) rotateX(60deg) translateY(50px); }
         }
 
         .container {
             max-width: 1200px;
             margin: 0 auto;
+            position: relative;
+            z-index: 1;
         }
 
         header {
             text-align: center;
-            color: white;
+            color: #00ff64;
             margin-bottom: 50px;
+            text-shadow: 0 0 10px #00ff64, 0 0 20px #00ff64, 0 0 30px #00ff64;
+            animation: glow 2s ease-in-out infinite alternate;
+        }
+
+        @keyframes glow {
+            from { text-shadow: 0 0 5px #00ff64, 0 0 10px #00ff64, 0 0 15px #00ff64; }
+            to { text-shadow: 0 0 10px #00ff64, 0 0 20px #00ff64, 0 0 30px #00ff64, 0 0 40px #00ff64; }
         }
 
         h1 {
-            font-size: 3em;
-            margin-bottom: 10px;
-            text-shadow: 2px 2px 4px rgba(0,0,0,0.3);
+            font-size: 2em;
+            margin-bottom: 20px;
+            line-height: 1.4;
         }
 
         .tagline {
-            font-size: 1.2em;
-            opacity: 0.9;
-            font-style: italic;
+            font-size: 0.6em;
+            color: #00cc52;
+            margin-top: 10px;
         }
 
         .projects-grid {
@@ -49,84 +84,153 @@
         }
 
         .project-card {
-            background: white;
-            border-radius: 15px;
-            padding: 30px;
-            box-shadow: 0 10px 30px rgba(0,0,0,0.2);
-            transition: transform 0.3s ease, box-shadow 0.3s ease;
+            background: linear-gradient(135deg, #0f1a1d 0%, #152228 100%);
+            border: 3px solid #00ff64;
+            border-radius: 5px;
+            padding: 25px;
+            box-shadow:
+                0 0 10px rgba(0, 255, 100, 0.3),
+                inset 0 0 20px rgba(0, 0, 0, 0.5);
+            transition: all 0.3s ease;
             cursor: pointer;
             text-decoration: none;
-            color: inherit;
+            color: #00ff64;
             display: block;
+            position: relative;
+            overflow: hidden;
+        }
+
+        .project-card::before {
+            content: '';
+            position: absolute;
+            top: -2px;
+            left: -2px;
+            right: -2px;
+            bottom: -2px;
+            background: linear-gradient(45deg, #00ff64, #00cc52, #00ff64);
+            z-index: -1;
+            opacity: 0;
+            transition: opacity 0.3s ease;
         }
 
         .project-card:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 15px 40px rgba(0,0,0,0.3);
+            transform: translateY(-5px) scale(1.02);
+            box-shadow:
+                0 0 20px rgba(0, 255, 100, 0.6),
+                0 0 40px rgba(0, 255, 100, 0.4),
+                inset 0 0 20px rgba(0, 255, 100, 0.1);
+            border-color: #00ffaa;
+        }
+
+        .project-card:hover::before {
+            opacity: 0.2;
         }
 
         .project-icon {
-            font-size: 3em;
+            font-size: 2.5em;
             margin-bottom: 15px;
+            filter: drop-shadow(0 0 10px #00ff64);
         }
 
         .project-title {
-            font-size: 1.5em;
-            margin-bottom: 10px;
-            color: #667eea;
-            font-weight: bold;
+            font-size: 0.9em;
+            margin-bottom: 15px;
+            color: #00ff64;
+            line-height: 1.4;
         }
 
         .project-description {
-            color: #666;
+            color: #00cc52;
             line-height: 1.6;
+            font-size: 0.5em;
         }
 
         .add-project {
-            background: linear-gradient(135deg, #00AE86 0%, #00d9a5 100%);
-            color: white;
-            border: none;
+            background: linear-gradient(135deg, #1a2f2a 0%, #0f1f1a 100%);
+            border-color: #00ffaa;
             display: flex;
             align-items: center;
             justify-content: center;
             flex-direction: column;
+            animation: pulse 2s ease-in-out infinite;
+        }
+
+        @keyframes pulse {
+            0%, 100% { box-shadow: 0 0 10px rgba(0, 255, 170, 0.3), inset 0 0 20px rgba(0, 0, 0, 0.5); }
+            50% { box-shadow: 0 0 30px rgba(0, 255, 170, 0.6), inset 0 0 20px rgba(0, 0, 0, 0.5); }
         }
 
         .add-project:hover {
-            background: linear-gradient(135deg, #00d9a5 0%, #00AE86 100%);
+            background: linear-gradient(135deg, #0f1f1a 0%, #1a2f2a 100%);
+            animation: none;
         }
 
         footer {
             text-align: center;
-            color: white;
+            color: #00cc52;
             margin-top: 60px;
-            opacity: 0.8;
+            font-size: 0.5em;
+            line-height: 1.8;
+        }
+
+        footer code {
+            background: #152228;
+            padding: 3px 8px;
+            border: 1px solid #00ff64;
+            border-radius: 3px;
+            color: #00ff64;
         }
 
         .refresh-btn {
-            background: rgba(255,255,255,0.2);
-            color: white;
-            border: 2px solid white;
+            background: #0f1a1d;
+            color: #00ff64;
+            border: 2px solid #00ff64;
             padding: 10px 20px;
-            border-radius: 25px;
             cursor: pointer;
-            font-size: 1em;
+            font-size: 0.6em;
+            font-family: 'Press Start 2P', cursive;
             margin-top: 20px;
             transition: all 0.3s ease;
+            box-shadow: 0 0 10px rgba(0, 255, 100, 0.3);
         }
 
         .refresh-btn:hover {
-            background: white;
-            color: #667eea;
+            background: #00ff64;
+            color: #0a0e0f;
+            box-shadow: 0 0 20px rgba(0, 255, 100, 0.6);
+            transform: scale(1.05);
+        }
+
+        .refresh-btn:active {
+            transform: scale(0.95);
+        }
+
+        /* Scanline effect */
+        body::after {
+            content: '';
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: repeating-linear-gradient(
+                0deg,
+                rgba(0, 0, 0, 0.15) 0px,
+                transparent 1px,
+                transparent 2px,
+                rgba(0, 0, 0, 0.15) 3px
+            );
+            pointer-events: none;
+            z-index: 999;
         }
     </style>
 </head>
 <body>
     <div class="container">
         <header>
-            <h1>🤖 Bot Sportello's Workshop</h1>
-            <p class="tagline">yeah man... just a chill space for all the projects</p>
-            <button class="refresh-btn" onclick="loadProjects()">🔄 Refresh Projects</button>
+            <h1>BOT SPORTELLO'S<br>ARCADE</h1>
+            <p class="tagline">INSERT COIN TO CONTINUE</p>
+            <button class="refresh-btn" onclick="loadProjects()">[ REFRESH ]</button>
         </header>
 
         <div class="projects-grid" id="projectsGrid">
@@ -134,8 +238,9 @@
         </div>
 
         <footer>
-            <p>Built with Bot Sportello • Discord Bot Project Manager</p>
-            <p style="margin-top: 10px; font-size: 0.9em;">Use <code>/add-page</code> in Discord to add new projects</p>
+            <p>BUILT WITH BOT SPORTELLO</p>
+            <p style="margin-top: 10px;">USE <code>/add-page</code> IN DISCORD TO ADD NEW PROJECTS</p>
+            <p style="margin-top: 10px; opacity: 0.5;">© 1985 SPORTELLO SYSTEMS</p>
         </footer>
     </div>
 
@@ -202,8 +307,8 @@
                 card.href = `./games/${project}.html`;
                 card.innerHTML = `
                     <div class="project-icon">${metadata.icon}</div>
-                    <div class="project-title">${formatProjectName(project)}</div>
-                    <div class="project-description">${metadata.description}</div>
+                    <div class="project-title">${formatProjectName(project).toUpperCase()}</div>
+                    <div class="project-description">${metadata.description.toUpperCase()}</div>
                 `;
                 grid.appendChild(card);
             });
@@ -213,8 +318,8 @@
             addCard.className = 'project-card add-project';
             addCard.innerHTML = `
                 <div class="project-icon">➕</div>
-                <div class="project-title">Add New Page</div>
-                <div class="project-description">Use /add-page in Discord to add a new page</div>
+                <div class="project-title">ADD NEW PAGE</div>
+                <div class="project-description">USE /ADD-PAGE IN DISCORD</div>
             `;
             grid.appendChild(addCard);
         }
