add live site links to all discord embeds and chat responses

--- a/index.html
+++ b/index.html
@@ -239,6 +239,9 @@
 
         <footer>
             <p>BUILT WITH BOT SPORTELLO</p>
+            <p style="margin-top: 10px;">
+                <a href="https://milwrite.github.io/javabot/" style="color: #00ff64; text-decoration: none; text-shadow: 0 0 5px #00ff64;" target="_blank">VISIT ARCADE →</a>
+            </p>
             <p style="margin-top: 10px;">USE <code>/add-page</code> IN DISCORD TO ADD NEW PROJECTS</p>
             <p style="margin-top: 10px; opacity: 0.5;">© 1985 SPORTELLO SYSTEMS</p>
         </footer>
