--- a/index.html
+++ b/index.html
@@ -10,225 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
-    <style>
-
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        body {
-            font-family: 'Press Start 2P', cursive, monospace !important;
-            background-color: #0a0e0f !important;
-            background-image:
-                repeating-linear-gradient(
-                    0deg,
-                    transparent,
-                    transparent 49px,
-                    rgba(0, 255, 100, 0.15) 49px,
-                    rgba(0, 255, 100, 0.15) 51px
-                ),
-                repeating-linear-gradient(
-                    90deg,
-                    transparent,
-                    transparent 49px,
-                    rgba(0, 255, 100, 0.15) 49px,
-                    rgba(0, 255, 100, 0.15) 51px
-                ) !important;
-            background-size: 50px 50px !important;
-            min-height: 100vh;
-            padding: 40px 20px;
-            position: relative;
-            overflow-x: hidden;
-            animation: gridMove 20s linear infinite !important;
-        }
-
-        @keyframes gridMove {
-            0% { background-position: 0 0; }
-            100% { background-position: 0 50px; }
-        }
-
-        .container {
-            max-width: 1200px;
-            margin: 0 auto;
-            position: relative;
-            z-index: 1;
-        }
-
-        header {
-            text-align: center;
-            color: #00ff64;
-            margin-bottom: 50px;
-            text-shadow: 0 0 10px #00ff64, 0 0 20px #00ff64, 0 0 30px #00ff64;
-            animation: glow 2s ease-in-out infinite alternate;
-        }
-
-        @keyframes glow {
-            from { text-shadow: 0 0 5px #00ff64, 0 0 10px #00ff64, 0 0 15px #00ff64; }
-            to { text-shadow: 0 0 10px #00ff64, 0 0 20px #00ff64, 0 0 30px #00ff64, 0 0 40px #00ff64; }
-        }
-
-        h1 {
-            font-size: 2em;
-            margin-bottom: 20px;
-            line-height: 1.4;
-        }
-
-        .tagline {
-            font-size: 0.6em;
-            color: #00cc52;
-            margin-top: 10px;
-        }
-
-        .projects-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-            gap: 25px;
-            margin-top: 30px;
-        }
-
-        .project-card {
-            background: linear-gradient(135deg, #0f1a1d 0%, #152228 100%);
-            border: 3px solid #00ff64;
-            border-radius: 5px;
-            padding: 25px;
-            box-shadow:
-                0 0 10px rgba(0, 255, 100, 0.3),
-                inset 0 0 20px rgba(0, 0, 0, 0.5);
-            transition: all 0.3s ease;
-            cursor: pointer;
-            text-decoration: none;
-            color: #00ff64;
-            display: block;
-            position: relative;
-            overflow: hidden;
-        }
-
-        .project-card::before {
-            content: '';
-            position: absolute;
-            top: -2px;
-            left: -2px;
-            right: -2px;
-            bottom: -2px;
-            background: linear-gradient(45deg, #00ff64, #00cc52, #00ff64);
-            z-index: -1;
-            opacity: 0;
-            transition: opacity 0.3s ease;
-        }
-
-        .project-card:hover {
-            transform: translateY(-5px) scale(1.02);
-            box-shadow:
-                0 0 20px rgba(0, 255, 100, 0.6),
-                0 0 40px rgba(0, 255, 100, 0.4),
-                inset 0 0 20px rgba(0, 255, 100, 0.1);
-            border-color: #00ffaa;
-        }
-
-        .project-card:hover::before {
-            opacity: 0.2;
-        }
-
-        .project-icon {
-            font-size: 2.5em;
-            margin-bottom: 15px;
-            filter: drop-shadow(0 0 10px #00ff64);
-        }
-
-        .project-title {
-            font-size: 0.9em;
-            margin-bottom: 15px;
-            color: #00ff64;
-            line-height: 1.4;
-        }
-
-        .project-description {
-            color: #00cc52;
-            line-height: 1.6;
-            font-size: 0.5em;
-        }
-
-        .add-project {
-            background: linear-gradient(135deg, #1a2f2a 0%, #0f1f1a 100%);
-            border-color: #00ffaa;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            flex-direction: column;
-            animation: pulse 2s ease-in-out infinite;
-        }
-
-        @keyframes pulse {
-            0%, 100% { box-shadow: 0 0 10px rgba(0, 255, 170, 0.3), inset 0 0 20px rgba(0, 0, 0, 0.5); }
-            50% { box-shadow: 0 0 30px rgba(0, 255, 170, 0.6), inset 0 0 20px rgba(0, 0, 0, 0.5); }
-        }
-
-        .add-project:hover {
-            background: linear-gradient(135deg, #0f1f1a 0%, #1a2f2a 100%);
-            animation: none;
-        }
-
-        footer {
-            text-align: center;
-            color: #00cc52;
-            margin-top: 60px;
-            font-size: 0.5em;
-            line-height: 1.8;
-        }
-
-        footer code {
-            background: #152228;
-            padding: 3px 8px;
-            border: 1px solid #00ff64;
-            border-radius: 3px;
-            color: #00ff64;
-        }
-
-        .refresh-btn {
-            background: #0f1a1d;
-            color: #00ff64;
-            border: 2px solid #00ff64;
-            padding: 10px 20px;
-            cursor: pointer;
-            font-size: 0.6em;
-            font-family: 'Press Start 2P', cursive;
-            margin-top: 20px;
-            transition: all 0.3s ease;
-            box-shadow: 0 0 10px rgba(0, 255, 100, 0.3);
-        }
-
-        .refresh-btn:hover {
-            background: #00ff64;
-            color: #0a0e0f;
-            box-shadow: 0 0 20px rgba(0, 255, 100, 0.6);
-            transform: scale(1.05);
-        }
-
-        .refresh-btn:active {
-            transform: scale(0.95);
-        }
-
-        /* Scanline effect */
-        body::after {
-            content: '';
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: repeating-linear-gradient(
-                0deg,
-                rgba(0, 0, 0, 0.15) 0px,
-                transparent 1px,
-                transparent 2px,
-                rgba(0, 0, 0, 0.15) 3px
-            );
-            pointer-events: none;
-            z-index: 999;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
