--- a/index.html
+++ b/index.html
@@ -53,6 +53,26 @@
                 icon: '✅',
                 description: 'A beautiful todo list app'
             }
+        ,
+            'cen-sunday-todo': {
+                icon: '✅',
+                description: 'Cen Sunday Todo'
+            }
+        ,
+            'planner': {
+                icon: '📋',
+                description: 'Planner'
+            }
+        ,
+            'snaker': {
+                icon: '🐍',
+                description: 'Snaker'
+            }
+        ,
+            'weekend planner': {
+                icon: '📋',
+                description: 'Weekend planner'
+            }
         };
 
         async function loadProjects() {
