Add radish love poem for Cen

--- a/index.html
+++ b/index.html
@@ -52,26 +52,26 @@
             'cen-todo-list': {
                 icon: '✅',
                 description: 'A beautiful todo list app'
-            }
-        ,
+            },
             'cen-sunday-todo': {
                 icon: '✅',
                 description: 'Cen Sunday Todo'
-            }
-        ,
+            },
             'planner': {
                 icon: '📋',
                 description: 'Planner'
-            }
-        ,
+            },
             'snaker': {
                 icon: '🐍',
                 description: 'Snaker'
-            }
-        ,
+            },
             'weekend planner': {
                 icon: '📋',
                 description: 'Weekend planner'
+            },
+            'radish_love': {
+                icon: '🌐',
+                description: 'A love poem for Cen about radishes - celebrating the crisp, peppery beauty of radishes with romantic flair'
             }
         };
 
