--- a/index.html
+++ b/index.html
@@ -73,6 +73,11 @@
                 icon: '🌐',
                 description: 'A love poem for Cen about radishes - celebrating the crisp, peppery beauty of radishes with romantic flair'
             }
+        ,
+            'alex_dog_mess': {
+                icon: '🌐',
+                description: 'A webpage visualization telling Alex to clean up his dog's mess with animated text and visual effects'
+            }
         };
 
         async function loadProjects() {
