fix frogger, sudoku, mobile responsiveness, remove example page

--- a/src/alex_dog_mess.html
+++ b/src/alex_dog_mess.html
@@ -19,8 +19,10 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            overflow: hidden;
+            overflow-x: auto;
+            overflow-y: auto;
             position: relative;
+            padding: 20px;
         }
 
         body::before {
