--- a/src/frogger.html
+++ b/src/frogger.html
@@ -4,29 +4,98 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>frogger</title>
+    <link rel="stylesheet" href="../page-theme.css">
     <style>
         body {
-            margin: 0;
-            padding: 20px;
-            background: #1a1a1a;
-            color: #fff;
-            font-family: Arial, sans-serif;
+            padding: 10px;
+            min-height: 100vh;
+            overflow-x: auto;
+            overflow-y: auto;
+        }
+        .game-container {
             display: flex;
             flex-direction: column;
             align-items: center;
+            gap: 20px;
+            max-width: 100%;
+            margin: 0 auto;
+            padding-bottom: 50px;
         }
         canvas {
-            border: 2px solid #00AE86;
+            border: 2px solid #7dd3a0;
             background: #2c3e50;
+            max-width: 100%;
+            height: auto;
+            display: block;
+        }
+        .controls {
+            text-align: center;
+            color: #7dd3a0;
+            margin-top: 10px;
+        }
+        .mobile-controls {
+            display: none;
+            grid-template-columns: repeat(3, 1fr);
+            gap: 10px;
+            max-width: 200px;
+            margin: 20px auto;
+        }
+        .mobile-btn {
+            background: #7dd3a0;
+            color: #1a1d23;
+            border: none;
+            padding: 15px;
+            border-radius: 5px;
+            font-family: inherit;
+            font-size: 14px;
+            cursor: pointer;
+            user-select: none;
+        }
+        .mobile-btn:active {
+            background: #5bb885;
+        }
+        @media (max-width: 768px) {
+            .mobile-controls {
+                display: grid;
+            }
+            canvas {
+                max-width: 95vw;
+                max-height: 60vh;
+            }
+            .game-container {
+                padding: 10px;
+            }
+        }
+        @media (max-width: 480px) {
+            h1 {
+                font-size: 24px;
+            }
+            canvas {
+                max-width: 90vw;
+                max-height: 50vh;
+            }
         }
     </style>
 </head>
 <body>
-    <div style="position: fixed; top: 20px; left: 20px; z-index: 9999;">
-        <a href="../index.html" style="text-decoration: none; background: rgba(102, 126, 234, 0.9); color: white; padding: 10px 20px; border-radius: 25px; font-family: Arial, sans-serif; box-shadow: 0 4px 10px rgba(0,0,0,0.2); transition: all 0.3s ease;" onmouseover="this.style.background='rgba(102, 126, 234, 1)'" onmouseout="this.style.background='rgba(102, 126, 234, 0.9)'">← Home</a>
+    <a href="../index.html" class="home-link">← Home</a>
+    
+    <div class="game-container">
+        <h1>Frogger</h1>
+        <canvas id="gameCanvas"></canvas>
+        <div class="controls">
+            Use arrow keys to move the frog!<br>
+            Avoid cars, use logs to cross water
+        </div>
+        <div class="mobile-controls">
+            <div></div>
+            <button class="mobile-btn" data-key="ArrowUp">↑</button>
+            <div></div>
+            <button class="mobile-btn" data-key="ArrowLeft">←</button>
+            <button class="mobile-btn" data-key="ArrowDown">↓</button>
+            <button class="mobile-btn" data-key="ArrowRight">→</button>
+        </div>
     </div>
-    <h1>frogger</h1>
-    <canvas id="gameCanvas"></canvas>
 
     <script src="frogger.js"></script>
 </body>
