--- a/src/snaker.html
+++ b/src/snaker.html
@@ -18,7 +18,9 @@
             align-items: center;
             min-height: 100vh;
             background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-            overflow: hidden;
+            overflow-x: auto;
+            overflow-y: auto;
+            padding: 20px;
         }
 
         .container {
