--- a/src/alex_dog_mess.html
+++ b/src/alex_dog_mess.html
@@ -5,317 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alex's Dog Mess - Clean Up!</title>
     <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300;400;600;700&family=Bangers&display=swap" rel="stylesheet">
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        body {
-            font-family: 'Fredoka', sans-serif;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-            min-height: 100vh;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            overflow-x: auto;
-            overflow-y: auto;
-            position: relative;
-            padding: 20px;
-        }
-
-        body::before {
-            content: '';
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: radial-gradient(circle at 20% 50%, rgba(255, 107, 107, 0.1) 0%, transparent 50%),
-                        radial-gradient(circle at 80% 80%, rgba(255, 215, 0, 0.1) 0%, transparent 50%);
-            pointer-events: none;
-            z-index: 0;
-        }
-
-        .home-link {
-            position: fixed;
-            top: 20px;
-            left: 20px;
-            z-index: 9999;
-            text-decoration: none;
-            background: rgba(102, 126, 234, 0.9);
-            color: white;
-            padding: 10px 20px;
-            border-radius: 25px;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
-            font-weight: 600;
-            transition: all 0.3s ease;
-        }
-
-        .home-link:hover {
-            background: rgba(102, 126, 234, 1);
-            transform: translateY(-2px);
-            box-shadow: 0 6px 15px rgba(0, 0, 0, 0.3);
-        }
-
-        .container {
-            position: relative;
-            z-index: 1;
-            text-align: center;
-            max-width: 900px;
-            width: 90%;
-        }
-
-        .main-content {
-            background: rgba(255, 255, 255, 0.95);
-            border-radius: 30px;
-            padding: 60px 40px;
-            box-shadow: 0 20px 60px rgba(0, 0, 0, 0.3);
-            backdrop-filter: blur(10px);
-        }
-
-        .title {
-            font-family: 'Bangers', cursive;
-            font-size: 4em;
-            color: #ff6b6b;
-            margin-bottom: 20px;
-            text-shadow: 3px 3px 0px rgba(0, 0, 0, 0.1);
-            animation: bounce 0.6s ease-in-out;
-        }
-
-        @keyframes bounce {
-            0%, 100% { transform: translateY(0); }
-            50% { transform: translateY(-20px); }
-        }
-
-        .subtitle {
-            font-size: 1.8em;
-            color: #333;
-            margin-bottom: 40px;
-            font-weight: 600;
-            animation: fadeInDown 1s ease-out 0.3s both;
-        }
-
-        @keyframes fadeInDown {
-            from {
-                opacity: 0;
-                transform: translateY(-30px);
-            }
-            to {
-                opacity: 1;
-                transform: translateY(0);
-            }
-        }
-
-        .dog-container {
-            margin: 40px 0;
-            position: relative;
-            height: 200px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-
-        .dog-emoji {
-            font-size: 120px;
-            animation: wiggle 0.5s ease-in-out infinite;
-            filter: drop-shadow(0 4px 8px rgba(0, 0, 0, 0.2));
-        }
-
-        @keyframes wiggle {
-            0%, 100% { transform: rotate(-5deg); }
-            50% { transform: rotate(5deg); }
-        }
-
-        .mess-container {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(60px, 1fr));
-            gap: 15px;
-            margin: 40px 0;
-            max-width: 500px;
-            margin-left: auto;
-            margin-right: auto;
-        }
-
-        .mess-item {
-            font-size: 50px;
-            animation: float 3s ease-in-out infinite;
-            cursor: pointer;
-            transition: transform 0.2s;
-            filter: drop-shadow(0 4px 8px rgba(0, 0, 0, 0.15));
-        }
-
-        .mess-item:hover {
-            transform: scale(1.2);
-        }
-
-        @keyframes float {
-            0%, 100% { transform: translateY(0px); }
-            50% { transform: translateY(-15px); }
-        }
-
-        .mess-item:nth-child(1) { animation-delay: 0s; }
-        .mess-item:nth-child(2) { animation-delay: 0.3s; }
-        .mess-item:nth-child(3) { animation-delay: 0.6s; }
-        .mess-item:nth-child(4) { animation-delay: 0.9s; }
-        .mess-item:nth-child(5) { animation-delay: 1.2s; }
-        .mess-item:nth-child(6) { animation-delay: 1.5s; }
-
-        .message {
-            font-size: 1.3em;
-            color: #764ba2;
-            margin: 30px 0;
-            font-weight: 600;
-            animation: fadeInUp 1s ease-out 0.6s both;
-            line-height: 1.6;
-        }
-
-        @keyframes fadeInUp {
-            from {
-                opacity: 0;
-                transform: translateY(30px);
-            }
-            to {
-                opacity: 1;
-                transform: translateY(0);
-            }
-        }
-
-        .button-group {
-            display: flex;
-            gap: 20px;
-            justify-content: center;
-            margin-top: 40px;
-            flex-wrap: wrap;
-            animation: fadeIn 1s ease-out 0.9s both;
-        }
-
-        @keyframes fadeIn {
-            from { opacity: 0; }
-            to { opacity: 1; }
-        }
-
-        .btn {
-            padding: 15px 40px;
-            font-size: 1.1em;
-            font-weight: 700;
-            border: none;
-            border-radius: 50px;
-            cursor: pointer;
-            transition: all 0.3s ease;
-            text-transform: uppercase;
-            letter-spacing: 1px;
-            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
-            font-family: 'Fredoka', sans-serif;
-        }
-
-        .btn-yes {
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-            color: white;
-        }
-
-        .btn-yes:hover {
-            transform: translateY(-3px);
-            box-shadow: 0 6px 20px rgba(102, 126, 234, 0.4);
-        }
-
-        .btn-yes:active {
-            transform: translateY(-1px);
-        }
-
-        .btn-no {
-            background: linear-gradient(135deg, #ff6b6b 0%, #ff8e72 100%);
-            color: white;
-        }
-
-        .btn-no:hover {
-            transform: translateY(-3px);
-            box-shadow: 0 6px 20px rgba(255, 107, 107, 0.4);
-        }
-
-        .btn-no:active {
-            transform: translateY(-1px);
-        }
-
-        .confetti {
-            position: fixed;
-            pointer-events: none;
-            font-size: 30px;
-            z-index: 9998;
-        }
-
-        .success-message {
-            display: none;
-            font-size: 2.5em;
-            color: #2ecc71;
-            font-weight: 700;
-            margin: 30px 0;
-            animation: scaleIn 0.6s cubic-bezier(0.68, -0.55, 0.265, 1.55);
-        }
-
-        @keyframes scaleIn {
-            from {
-                opacity: 0;
-                transform: scale(0);
-            }
-            to {
-                opacity: 1;
-                transform: scale(1);
-            }
-        }
-
-        .sad-face {
-            font-size: 80px;
-            animation: shake 0.5s ease-in-out;
-        }
-
-        @keyframes shake {
-            0%, 100% { transform: translateX(0); }
-            25% { transform: translateX(-10px); }
-            75% { transform: translateX(10px); }
-        }
-
-        .particles {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            pointer-events: none;
-            z-index: 1;
-        }
-
-        .particle {
-            position: absolute;
-            pointer-events: none;
-        }
-
-        @media (max-width: 768px) {
-            .title {
-                font-size: 2.5em;
-            }
-
-            .subtitle {
-                font-size: 1.3em;
-            }
-
-            .dog-emoji {
-                font-size: 80px;
-            }
-
-            .main-content {
-                padding: 40px 20px;
-            }
-
-            .mess-item {
-                font-size: 35px;
-            }
-        }
-    </style>
+    
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../page-theme.css">
 </head>
 <body>
-    <a href="../index.html" class="home-link">← Home</a>
+    <a href="../index.html" class="home-link">← HOME</a>
     
     <div class="particles" id="particles"></div>
 
