--- a/src/borscht.html
+++ b/src/borscht.html
@@ -5,444 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Interactive Borscht Recipe</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background: linear-gradient(135deg, #667ee6 0%, #764ba2 100%);
-            min-height: 100vh;
-            padding: 40px 20px;
-            overflow-x: hidden;
-        }
-
-        .container {
-            max-width: 1200px;
-            margin: 0 auto;
-        }
-
-        header {
-            text-align: center;
-            color: white;
-            margin-bottom: 40px;
-            animation: slideDown 0.6s ease-out;
-        }
-
-        header h1 {
-            font-size: 3.5em;
-            margin-bottom: 10px;
-            text-shadow: 2px 2px 4px rgba(0,0,0,0.3);
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            gap: 15px;
-        }
-
-        header p {
-            font-size: 1.2em;
-            opacity: 0.95;
-        }
-
-        .main-content {
-            display: grid;
-            grid-template-columns: 1fr 1fr;
-            gap: 30px;
-            margin-bottom: 40px;
-        }
-
-        .card {
-            background: white;
-            border-radius: 15px;
-            padding: 30px;
-            box-shadow: 0 10px 40px rgba(0,0,0,0.2);
-            animation: fadeInUp 0.6s ease-out;
-        }
-
-        .card:nth-child(2) {
-            animation-delay: 0.2s;
-        }
-
-        .card h2 {
-            color: #667ee6;
-            margin-bottom: 20px;
-            font-size: 1.8em;
-            display: flex;
-            align-items: center;
-            gap: 10px;
-        }
-
-        .ingredients-list {
-            list-style: none;
-        }
-
-        .ingredient-item {
-            padding: 12px;
-            margin-bottom: 10px;
-            background: #f8f9fa;
-            border-radius: 8px;
-            display: flex;
-            align-items: center;
-            cursor: pointer;
-            transition: all 0.3s ease;
-            border-left: 4px solid #667ee6;
-        }
-
-        .ingredient-item:hover {
-            background: #e8ebff;
-            transform: translateX(5px);
-        }
-
-        .ingredient-item.checked {
-            background: #d4edda;
-            border-left-color: #28a745;
-        }
-
-        .ingredient-item input[type="checkbox"] {
-            margin-right: 12px;
-            width: 18px;
-            height: 18px;
-            cursor: pointer;
-        }
-
-        .ingredient-item.checked span {
-            text-decoration: line-through;
-            color: #666;
-        }
-
-        .quantity {
-            margin-left: auto;
-            font-weight: bold;
-            color: #667ee6;
-            background: white;
-            padding: 5px 10px;
-            border-radius: 5px;
-        }
-
-        .steps-list {
-            list-style: none;
-        }
-
-        .step-item {
-            padding: 15px;
-            margin-bottom: 15px;
-            background: #f8f9fa;
-            border-radius: 8px;
-            cursor: pointer;
-            transition: all 0.3s ease;
-            border-left: 4px solid #764ba2;
-            display: flex;
-            gap: 15px;
-        }
-
-        .step-item:hover {
-            background: #f0e6ff;
-            transform: translateX(5px);
-        }
-
-        .step-item.completed {
-            background: #d4edda;
-            border-left-color: #28a745;
-        }
-
-        .step-number {
-            min-width: 40px;
-            height: 40px;
-            background: #667ee6;
-            color: white;
-            border-radius: 50%;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            font-weight: bold;
-            flex-shrink: 0;
-        }
-
-        .step-item.completed .step-number {
-            background: #28a745;
-        }
-
-        .step-content {
-            flex: 1;
-        }
-
-        .step-content h4 {
-            color: #333;
-            margin-bottom: 5px;
-        }
-
-        .step-content p {
-            color: #666;
-            font-size: 0.95em;
-        }
-
-        .timer-section {
-            margin-top: 15px;
-            padding-top: 15px;
-            border-top: 2px solid #e0e0e0;
-        }
-
-        .timer-input {
-            display: flex;
-            gap: 10px;
-            margin-top: 10px;
-        }
-
-        .timer-input input {
-            width: 80px;
-            padding: 8px;
-            border: 2px solid #667ee6;
-            border-radius: 5px;
-            font-size: 1em;
-        }
-
-        .timer-input button {
-            padding: 8px 15px;
-            background: #667ee6;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            transition: background 0.3s;
-        }
-
-        .timer-input button:hover {
-            background: #764ba2;
-        }
-
-        .timer-display {
-            font-size: 1.5em;
-            font-weight: bold;
-            color: #667ee6;
-            margin-top: 10px;
-            text-align: center;
-        }
-
-        .servings-control {
-            background: #f8f9fa;
-            padding: 15px;
-            border-radius: 8px;
-            margin-bottom: 20px;
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-        }
-
-        .servings-control label {
-            font-weight: bold;
-            color: #333;
-        }
-
-        .servings-buttons {
-            display: flex;
-            gap: 10px;
-        }
-
-        .servings-buttons button {
-            width: 40px;
-            height: 40px;
-            border: 2px solid #667ee6;
-            background: white;
-            color: #667ee6;
-            border-radius: 5px;
-            cursor: pointer;
-            font-size: 1.2em;
-            transition: all 0.3s;
-        }
-
-        .servings-buttons button:hover {
-            background: #667ee6;
-            color: white;
-        }
-
-        .servings-display {
-            font-size: 1.3em;
-            font-weight: bold;
-            color: #667ee6;
-            min-width: 60px;
-            text-align: center;
-        }
-
-        .nutrition-grid {
-            display: grid;
-            grid-template-columns: repeat(4, 1fr);
-            gap: 15px;
-            margin-top: 20px;
-        }
-
-        .nutrition-card {
-            background: linear-gradient(135deg, #667ee6 0%, #764ba2 100%);
-            color: white;
-            padding: 15px;
-            border-radius: 8px;
-            text-align: center;
-        }
-
-        .nutrition-card .value {
-            font-size: 1.8em;
-            font-weight: bold;
-        }
-
-        .nutrition-card .label {
-            font-size: 0.85em;
-            opacity: 0.9;
-        }
-
-        .progress-bar {
-            width: 100%;
-            height: 8px;
-            background: #e0e0e0;
-            border-radius: 10px;
-            overflow: hidden;
-            margin-top: 20px;
-        }
-
-        .progress-fill {
-            height: 100%;
-            background: linear-gradient(90deg, #667ee6 0%, #764ba2 100%);
-            transition: width 0.3s ease;
-        }
-
-        .completion-message {
-            text-align: center;
-            padding: 20px;
-            background: #d4edda;
-            color: #155724;
-            border-radius: 8px;
-            margin-top: 20px;
-            display: none;
-            animation: slideUp 0.5s ease-out;
-        }
-
-        .completion-message.show {
-            display: block;
-        }
-
-        .tips-box {
-            background: #fff3cd;
-            border-left: 4px solid #ffc107;
-            padding: 15px;
-            border-radius: 8px;
-            margin-top: 20px;
-        }
-
-        .tips-box h4 {
-            color: #856404;
-            margin-bottom: 8px;
-        }
-
-        .tips-box p {
-            color: #856404;
-            font-size: 0.95em;
-        }
-
-        .action-buttons {
-            display: flex;
-            gap: 10px;
-            margin-top: 20px;
-        }
-
-        .btn {
-            flex: 1;
-            padding: 12px;
-            border: none;
-            border-radius: 8px;
-            cursor: pointer;
-            font-size: 1em;
-            font-weight: bold;
-            transition: all 0.3s;
-        }
-
-        .btn-reset {
-            background: #e74c3c;
-            color: white;
-        }
-
-        .btn-reset:hover {
-            background: #c0392b;
-        }
-
-        .btn-print {
-            background: #3498db;
-            color: white;
-        }
-
-        .btn-print:hover {
-            background: #2980b9;
-        }
-
-        @media (max-width: 768px) {
-            .main-content {
-                grid-template-columns: 1fr;
-            }
-
-            header h1 {
-                font-size: 2.5em;
-            }
-
-            .nutrition-grid {
-                grid-template-columns: repeat(2, 1fr);
-            }
-        }
-
-        @keyframes slideDown {
-            from {
-                opacity: 0;
-                transform: translateY(-30px);
-            }
-            to {
-                opacity: 1;
-                transform: translateY(0);
-            }
-        }
-
-        @keyframes fadeInUp {
-            from {
-                opacity: 0;
-                transform: translateY(30px);
-            }
-            to {
-                opacity: 1;
-                transform: translateY(0);
-            }
-        }
-
-        @keyframes slideUp {
-            from {
-                opacity: 0;
-                transform: translateY(20px);
-            }
-            to {
-                opacity: 1;
-                transform: translateY(0);
-            }
-        }
-
-        .home-link {
-            position: fixed;
-            top: 20px;
-            left: 20px;
-            z-index: 9999;
-            text-decoration: none;
-            background: rgba(102, 126, 234, 0.9);
-            color: white;
-            padding: 10px 20px;
-            border-radius: 25px;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
-            transition: all 0.3s;
-            display: flex;
-            align-items: center;
-            gap: 8px;
-        }
-
-        .home-link:hover {
-            background: rgba(102, 126, 234, 1);
-            transform: translateX(-5px);
-        }
-    </style>
+    
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../page-theme.css">
 </head>
 <body>
     <a href="../index.html" class="home-link">
@@ -794,13 +359,7 @@
                 <html>
                 <head>
                     <title>Borscht Recipe</title>
-                    <style>
-                        body { font-family: Arial, sans-serif; margin: 40px; }
-                        h1 { color: #667ee6; }
-                        h2 { color: #764ba2; margin-top: 20px; }
-                        ul { margin: 10px 0; }
-                        li { margin: 8px 0; }
-                    </style>
+                    
                 </head>
                 <body>
                     <h1>Interactive Borscht Recipe</h1>
