--- a/src/radish_love.html
+++ b/src/radish_love.html
@@ -5,323 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Radish Love - A Poem for Cen</title>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700;900&family=Cormorant+Garamond:wght@300;400;600&display=swap" rel="stylesheet">
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        body {
-            font-family: 'Cormorant Garamond', serif;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-            min-height: 100vh;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            overflow-x: hidden;
-            position: relative;
-        }
-
-        .home-link {
-            position: fixed;
-            top: 20px;
-            left: 20px;
-            z-index: 9999;
-            text-decoration: none;
-            background: rgba(102, 126, 234, 0.9);
-            color: white;
-            padding: 10px 20px;
-            border-radius: 25px;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
-            font-weight: 600;
-            transition: all 0.3s ease;
-        }
-
-        .home-link:hover {
-            background: rgba(102, 126, 234, 1);
-            transform: translateY(-2px);
-            box-shadow: 0 6px 15px rgba(0, 0, 0, 0.3);
-        }
-
-        .container {
-            max-width: 900px;
-            width: 90%;
-            background: rgba(255, 255, 255, 0.95);
-            border-radius: 30px;
-            padding: 60px 50px;
-            box-shadow: 0 20px 60px rgba(0, 0, 0, 0.3);
-            position: relative;
-            overflow: hidden;
-        }
-
-        .container::before {
-            content: '';
-            position: absolute;
-            top: -50%;
-            right: -50%;
-            width: 500px;
-            height: 500px;
-            background: radial-gradient(circle, rgba(230, 126, 34, 0.1) 0%, transparent 70%);
-            border-radius: 50%;
-            pointer-events: none;
-        }
-
-        .container::after {
-            content: '';
-            position: absolute;
-            bottom: -30%;
-            left: -30%;
-            width: 400px;
-            height: 400px;
-            background: radial-gradient(circle, rgba(155, 89, 182, 0.1) 0%, transparent 70%);
-            border-radius: 50%;
-            pointer-events: none;
-        }
-
-        .content {
-            position: relative;
-            z-index: 1;
-        }
-
-        .title {
-            font-family: 'Playfair Display', serif;
-            font-size: 3.5em;
-            color: #e67e22;
-            text-align: center;
-            margin-bottom: 10px;
-            font-weight: 900;
-            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1);
-        }
-
-        .subtitle {
-            text-align: center;
-            color: #764ba2;
-            font-size: 1.3em;
-            margin-bottom: 40px;
-            font-weight: 300;
-            letter-spacing: 2px;
-        }
-
-        .poem {
-            font-size: 1.4em;
-            line-height: 2;
-            color: #2c3e50;
-            margin-bottom: 40px;
-            text-align: center;
-            font-weight: 300;
-        }
-
-        .stanza {
-            margin-bottom: 30px;
-            opacity: 0;
-            animation: fadeInUp 0.8s ease forwards;
-        }
-
-        .stanza:nth-child(1) {
-            animation-delay: 0.2s;
-        }
-
-        .stanza:nth-child(2) {
-            animation-delay: 0.4s;
-        }
-
-        .stanza:nth-child(3) {
-            animation-delay: 0.6s;
-        }
-
-        .stanza:nth-child(4) {
-            animation-delay: 0.8s;
-        }
-
-        .stanza:nth-child(5) {
-            animation-delay: 1s;
-        }
-
-        @keyframes fadeInUp {
-            from {
-                opacity: 0;
-                transform: translateY(30px);
-            }
-            to {
-                opacity: 1;
-                transform: translateY(0);
-            }
-        }
-
-        .radish-icon {
-            display: inline-block;
-            margin: 0 10px;
-            font-size: 1.5em;
-            animation: bounce 2s infinite;
-        }
-
-        .radish-icon:nth-child(2) {
-            animation-delay: 0.3s;
-        }
-
-        .radish-icon:nth-child(3) {
-            animation-delay: 0.6s;
-        }
-
-        @keyframes bounce {
-            0%, 100% {
-                transform: translateY(0);
-            }
-            50% {
-                transform: translateY(-20px);
-            }
-        }
-
-        .interactive-section {
-            margin-top: 50px;
-            padding: 30px;
-            background: linear-gradient(135deg, rgba(230, 126, 34, 0.1) 0%, rgba(155, 89, 182, 0.1) 100%);
-            border-radius: 20px;
-            text-align: center;
-        }
-
-        .button-group {
-            display: flex;
-            gap: 15px;
-            justify-content: center;
-            flex-wrap: wrap;
-            margin-top: 20px;
-        }
-
-        button {
-            padding: 12px 30px;
-            font-size: 1.1em;
-            border: none;
-            border-radius: 25px;
-            cursor: pointer;
-            transition: all 0.3s ease;
-            font-family: 'Cormorant Garamond', serif;
-            font-weight: 600;
-        }
-
-        .btn-primary {
-            background: linear-gradient(135deg, #e67e22, #e74c3c);
-            color: white;
-            box-shadow: 0 4px 15px rgba(230, 126, 34, 0.4);
-        }
-
-        .btn-primary:hover {
-            transform: translateY(-3px);
-            box-shadow: 0 6px 20px rgba(230, 126, 34, 0.6);
-        }
-
-        .btn-secondary {
-            background: linear-gradient(135deg, #764ba2, #667eea);
-            color: white;
-            box-shadow: 0 4px 15px rgba(118, 75, 162, 0.4);
-        }
-
-        .btn-secondary:hover {
-            transform: translateY(-3px);
-            box-shadow: 0 6px 20px rgba(118, 75, 162, 0.6);
-        }
-
-        .message {
-            margin-top: 20px;
-            font-size: 1.2em;
-            color: #764ba2;
-            font-weight: 600;
-            min-height: 30px;
-            animation: fadeIn 0.5s ease;
-        }
-
-        @keyframes fadeIn {
-            from {
-                opacity: 0;
-            }
-            to {
-                opacity: 1;
-            }
-        }
-
-        .radish-garden {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(80px, 1fr));
-            gap: 15px;
-            margin-top: 30px;
-            padding: 20px;
-            background: rgba(255, 255, 255, 0.5);
-            border-radius: 15px;
-        }
-
-        .radish-item {
-            width: 80px;
-            height: 80px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            font-size: 2.5em;
-            cursor: pointer;
-            transition: all 0.3s ease;
-            border-radius: 10px;
-            background: rgba(230, 126, 34, 0.1);
-        }
-
-        .radish-item:hover {
-            transform: scale(1.2) rotate(10deg);
-            background: rgba(230, 126, 34, 0.3);
-        }
-
-        .signature {
-            margin-top: 40px;
-            text-align: right;
-            font-size: 1.3em;
-            color: #764ba2;
-            font-style: italic;
-        }
-
-        @media (max-width: 768px) {
-            .container {
-                padding: 40px 30px;
-            }
-
-            .title {
-                font-size: 2.5em;
-            }
-
-            .subtitle {
-                font-size: 1.1em;
-            }
-
-            .poem {
-                font-size: 1.2em;
-                line-height: 1.8;
-            }
-
-            .button-group {
-                flex-direction: column;
-            }
-
-            button {
-                width: 100%;
-            }
-        }
-
-        .floating-radish {
-            position: fixed;
-            pointer-events: none;
-            font-size: 2em;
-            z-index: 0;
-        }
-
-        @keyframes float {
-            0%, 100% {
-                transform: translateY(0px) rotate(0deg);
-            }
-            50% {
-                transform: translateY(-20px) rotate(5deg);
-            }
-        }
-    </style>
+    
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../page-theme.css">
 </head>
 <body>
-    <a href="../index.html" style="position:fixed;top:20px;left:20px;z-index:9999;text-decoration:none;background:rgba(102,126,234,0.9);color:white;padding:10px 20px;border-radius:25px;box-shadow:0 4px 10px rgba(0,0,0,0.2)">← Home</a>
+    <a href="../index.html" class="home-link">← HOME</a>
 
     <div class="container">
         <div class="content">
