--- a/src/frogger.html
+++ b/src/frogger.html
@@ -6,6 +6,7 @@
     <title>frogger</title>
     <link rel="stylesheet" href="../page-theme.css">
     <style>
+        /* Game-specific overrides for noir terminal theme */
         body {
             padding: 10px;
             min-height: 100vh;
@@ -22,15 +23,16 @@
             padding-bottom: 50px;
         }
         canvas {
-            border: 2px solid #7dd3a0;
-            background: #2c3e50;
+            border: 3px solid #00ff41;
+            background: #0a0a0a;
             max-width: 100%;
             height: auto;
             display: block;
+            box-shadow: 0 0 30px rgba(0, 255, 65, 0.4);
         }
         .controls {
             text-align: center;
-            color: #7dd3a0;
+            color: #00ff41;
             margin-top: 10px;
         }
         .mobile-controls {
@@ -41,18 +43,18 @@
             margin: 20px auto;
         }
         .mobile-btn {
-            background: #7dd3a0;
-            color: #1a1d23;
-            border: none;
+            background: rgba(255, 0, 0, 0.7);
+            color: #00ff41;
+            border: 2px solid #00ff41;
             padding: 15px;
-            border-radius: 5px;
             font-family: inherit;
             font-size: 14px;
             cursor: pointer;
             user-select: none;
+            min-height: 44px;
         }
         .mobile-btn:active {
-            background: #5bb885;
+            background: #ff0000;
         }
         @media (max-width: 768px) {
             .mobile-controls {
