--- a/src/sudoku.html
+++ b/src/sudoku.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sudoku</title>
+    <link rel="stylesheet" href="../page-theme.css">
     <style>
+        /* Game-specific overrides for Sudoku */
         body {
-            padding: 10px;
+            padding: 80px 10px 20px;
             min-height: 100vh;
             overflow-x: auto;
             overflow-y: auto;
@@ -21,49 +23,50 @@
             padding-bottom: 50px;
         }
         .sudoku-grid {
-            background: #252a32;
-            border: 3px solid #7dd3a0;
+            background: rgba(26, 0, 0, 0.4);
+            border: 3px solid #00ff41;
             padding: 10px;
-            border-radius: 8px;
             display: grid;
             grid-template-columns: repeat(9, 1fr);
             grid-template-rows: repeat(9, 1fr);
             gap: 2px;
             max-width: 450px;
             aspect-ratio: 1;
+            box-shadow: 0 0 30px rgba(0, 255, 65, 0.4);
         }
         .cell {
-            background: #1a1d23;
-            border: 1px solid #333;
+            background: #0a0a0a;
+            border: 1px solid #00ff41;
             display: flex;
             align-items: center;
             justify-content: center;
-            font-family: 'Press Start 2P', monospace;
+            font-family: 'Courier Prime', monospace;
             font-size: 16px;
-            color: #7dd3a0;
+            color: #00ff41;
             cursor: pointer;
             transition: background 0.2s;
             aspect-ratio: 1;
             min-height: 40px;
         }
         .cell:hover {
-            background: #333;
+            background: rgba(0, 255, 65, 0.2);
         }
         .cell.selected {
-            background: #7dd3a0;
-            color: #1a1d23;
+            background: #00ff41;
+            color: #0a0a0a;
         }
         .cell.given {
-            background: #252a32;
-            color: #fff;
+            background: rgba(255, 0, 0, 0.3);
+            color: #00ffff;
             cursor: default;
+            font-weight: bold;
         }
         .cell.given:hover {
-            background: #252a32;
+            background: rgba(255, 0, 0, 0.3);
         }
         .cell.conflict {
-            background: #ff4444;
-            color: #fff;
+            background: #ff0000;
+            color: #00ff41;
         }
         .number-pad {
             display: grid;
@@ -72,18 +75,18 @@
             max-width: 200px;
         }
         .number-btn {
-            background: #7dd3a0;
-            color: #1a1d23;
-            border: none;
+            background: rgba(0, 0, 0, 0.6);
+            color: #00ff41;
+            border: 2px solid #00ff41;
             padding: 15px;
-            border-radius: 5px;
-            font-family: 'Press Start 2P', monospace;
+            font-family: 'Courier Prime', monospace;
             font-size: 14px;
             cursor: pointer;
             transition: all 0.2s;
+            min-height: 44px;
         }
         .number-btn:hover {
-            background: #5bb885;
+            background: rgba(0, 255, 65, 0.3);
             transform: scale(1.05);
         }
         .controls {
@@ -93,24 +96,24 @@
             justify-content: center;
         }
         .control-btn {
-            background: #252a32;
-            color: #7dd3a0;
-            border: 2px solid #7dd3a0;
+            background: rgba(255, 0, 0, 0.7);
+            color: #00ff41;
+            border: 2px solid #00ff41;
             padding: 10px 20px;
-            border-radius: 5px;
-            font-family: 'Press Start 2P', monospace;
+            font-family: 'Courier Prime', monospace;
             font-size: 12px;
             cursor: pointer;
             transition: all 0.2s;
+            min-height: 44px;
         }
         .control-btn:hover {
-            background: #7dd3a0;
-            color: #1a1d23;
+            background: #ff0000;
+            transform: skew(-3deg);
         }
         .info {
             text-align: center;
-            color: #7dd3a0;
-            font-family: 'Press Start 2P', monospace;
+            color: #00ff41;
+            font-family: 'Courier Prime', monospace;
             font-size: 12px;
         }
         @media (max-width: 768px) {
