fix rat bushwick fonts to readable courier prime

--- a/src/rat_bushwick.html
+++ b/src/rat_bushwick.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>🐀 RAT_BUSHWICK: A Rodent's Guide to Dining 🐀</title>
+    <link href="https://fonts.googleapis.com/css2?family=VT323&family=Courier+Prime:wght@400;700&display=swap" rel="stylesheet">
     <style>
         * {
             margin: 0;
@@ -51,10 +52,11 @@
         }
 
         h1 {
-            font-family: 'Press Start 2P', cursive;
+            font-family: 'Courier Prime', monospace;
             font-size: 2.5em;
             margin-bottom: 10px;
             letter-spacing: 2px;
+            font-weight: 700;
         }
 
         .subtitle {
@@ -127,7 +129,7 @@
         }
 
         .menu-item h3 {
-            font-family: 'Press Start 2P', cursive;
+            font-family: 'Courier Prime', monospace;
             font-size: 1.3em;
             margin-bottom: 10px;
             color: #ff006e;
@@ -171,7 +173,7 @@
             color: #000;
             border: 2px solid #00ff41;
             padding: 10px 20px;
-            font-family: 'Press Start 2P', cursive;
+            font-family: 'Courier Prime', monospace;
             font-size: 0.8em;
             cursor: pointer;
             transition: all 0.3s ease;
@@ -233,7 +235,7 @@
         }
 
         .modal h2 {
-            font-family: 'Press Start 2P', cursive;
+            font-family: 'Courier Prime', monospace;
             color: #ff006e;
             margin-bottom: 20px;
             font-size: 1.5em;
@@ -378,7 +380,7 @@
 
         .leaderboard h3 {
             color: #ff006e;
-            font-family: 'Press Start 2P', cursive;
+            font-family: 'Courier Prime', monospace;
             margin-bottom: 15px;
         }
 
@@ -644,7 +646,7 @@
 
         <!-- Mini Game Section -->
         <div class="mini-game">
-            <h2 style="font-family: 'Press Start 2P', cursive; color: #ff006e; margin-bottom: 20px;">🎮 PIZZA COLLECTOR 🎮</h2>
+            <h2 style="font-family: 'Courier Prime', monospace; color: #ff006e; margin-bottom: 20px;">🎮 PIZZA COLLECTOR 🎮</h2>
             <p style="margin-bottom: 15px;">Collect 🍕 pizza! Avoid 🐱 cats! Grab 🧀 cheese for speed boost!</p>
             <div class="game-canvas" id="gameCanvas"></div>
             <div class="game-stats" style="display: flex; gap: 20px; justify-content: center; margin: 10px 0;">
